--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <div class="flex-grow border-black border w-32"></div>
               <div class="flex-grow border-black border w-32"></div>
               <div
-                class="flex-grow border-black border w-32"
+                class="flex-grow border-black border w-32 cursor-pointer"
                 onclick="select(0, this.lastElementChild.src)"
               >
                 <img
@@ -38,7 +38,7 @@
               <div class="w-5 text-center">1</div>
               <div class="flex-grow border-black border w-32"></div>
               <div
-                class="flex-grow border-black border w-32"
+                class="flex-grow border-black border w-32 cursor-pointer"
                 onclick="select(11, this.lastElementChild.src)"
               >
                 <img
@@ -50,7 +50,7 @@
                 />
               </div>
               <div
-                class="flex-grow border-black border w-32"
+                class="flex-grow border-black border w-32 cursor-pointer"
                 onclick="select(10, this.lastElementChild.src)"
               >
                 <img
@@ -65,7 +65,7 @@
             <div class="flex gap-4 w-full justify-between">
               <div class="w-5 text-center">2</div>
               <div
-                class="flex-grow border-black border w-32"
+                class="flex-grow border-black border w-32 cursor-pointer"
                 onclick="select(22, this.lastElementChild.src)"
               >
                 <img
@@ -77,7 +77,7 @@
                 />
               </div>
               <div
-                class="flex-grow border-black border w-32"
+                class="flex-grow border-black border w-32 cursor-pointer"
                 onclick="select(21, this.lastElementChild.src)"
               >
                 <img
@@ -89,7 +89,7 @@
                 />
               </div>
               <div
-                class="flex-grow border-black border w-32"
+                class="flex-grow border-black border w-32 cursor-pointer"
                 onclick="select(20, this.lastElementChild.src)"
               >
                 <img
